--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reservasalas",
+  "name": "reservasalas3",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,10 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.6.0",
-    "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-toastify": "^9.1.3"
+    "next": "14.0.1"
   }
 }
